--- a/style.css
+++ b/style.css
@@ -72,7 +72,12 @@
 }
 
 #mb_6 {
-    
+    position: absolute;
+    min-height: 240px;
+    min-width: 400px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 1px 0px black;
+    margin-top: 450px;
 }
 
 .foot_block {
